Horizontal scroll prevention (fix)

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+
+html, body { // prevents horizontal scroll
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 .nav img:hover {
   transform: scale(1.1) !important;
 }
